--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,7 @@
         
         // Link para editar (lo muestras en el botón de Data)
         const SHEET_EDIT_URL = 'https://docs.google.com/spreadsheets/d/1JtNbSMaVOwxTRA-DzkY2DAoLibezJOx-xcYlr6-Spzs/edit';
+		const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzioMaZrAzUOOTcrJbu1zeBHkV1f3tBf4yNWLaA7fIClyV8DhAXi3zyol4SBDKSpd_D2w/exec';
 
         // ========================================
         // BASE DE DATOS LOCAL (EJEMPLO)
